# Mython

./: .gitignore  ADVANCED_TRANSLATION.md  ANALISE_MACROS_ABSTRACOES.md  ARCHITETURA_TRADUTOR.md  BLOCKLY_GUIDE.md  BLOCKLY_INTEGRATION.md  CODE_COMPLETE.md  CONTRIBUTING.md  CORRECAO_BUGS_EM_PROGRESSO.md  EVERYTHING_WORKS.md  GRAMMAR_A2.md  HOW_IT_WORKS.md  IMPLEMENTED_FEATURES.md  IMPROVEMENTS_NEEDED.md  LARK_99_PERCENT.md  LARK_99_PERCENT_COMPLETE.md  LARK_ANALYSIS.md  LARK_COMPARISON.md  LARK_EXAMPLES_ANALISE.md  MACROS_ATALHOS.md  MAXIMUM_LEVEL.md  MAXIMUM_NATURAL.md  MELHORIAS_IDENTIFICADAS.md  MELHORIAS_IMPLEMENTADAS.md  MIGRATION_TO_LARK.md  MOONSCRIPT_ANALISE.md  MYTHON_1.0.md  MYTHON_AUTO_DETECT.md  MYTHON_BASIC.md  MYTHON_DESIGN_NOTES.md  MYTHON_GRAMMAR_SPEC.md  MYTHON_I18N.md  MYTHON_I18N_COMPLETE.md  MYTHON_I18N_FINAL.md  MYTHON_SPEC.md  MYTHON_SPECIFICATION.md  MYTHON_TRANSFORMER_SPEC.md  MYTHON_ULTRA_SIMPLES.md  NATURAL_LANGUAGE.md  OFFICIAL_PATTERN_DICTIONARY.md  (+43 more)
Melhorar linguagem de programação simples e avançada/: MYTHON_ULTRA_SIMPLES.md  PYTHON_COMPLETE.md  README.md  advanced_simple.logic  grammar.lark
examples/: advanced_features.logic  age.logic  agent_example.logic  ai_example.logic  async_example.logic  calculator.logic  class_example.logic  comprehensive_python.logic  decorator_example.logic  exception_example.logic  function.logic  hello.logic  hello_es.logic  hello_pt.logic  list.logic  loop.logic  macros_atalhos.logic  maximum_level_demo.logic  maximum_natural.logic  natural_language.logic  pattern_examples.logic  philosophy.logic  (+9 more)
(+24 files in other folders)
