[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mython"
version = "0.1.0"
description = "A linguagem mais simples do mundo baseada em lógica e inglês A2 - transpila para Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "lark>=1.1.0",
]
authors = [
    {name = "Mython Team"}
]
keywords = [
    "transpiler",
    "programming-language",
    "python",
    "natural-language",
    "education",
    "beginner-friendly",
    "english-a2",
    "simple",
    "logic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
mython = "mython.cli:main"

[tool.setuptools]
packages = ["mython"]

[tool.setuptools.package-data]
mython = ["py.typed"]

